# Comfyui-PixNodes

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: build-readme.yml
locales/en/: main.json
locales/zh/: main.json  nodeDefs.json
nodes/: ImageSplitter.py  color_picker.py  create_empty_list.py  create_image_batch.py  create_video_list.py  get_video_from_path_list.py  get_video_from_video_list.py  if_else_dispatcher.py  if_else_logicGate.py  image_batch_compose.py  image_comparer.py  image_crop_edge.py  image_list_to_batch.py  list _to_imageBatch.py  list_from_loop.py  loadTextFromFolder.py
nodes/AIGV/: grid_storyboard_prompt.py  storyboard_previewer.py
nodes/LLM/: API_DeepSeek.py  API_Doubao.py  API_Kimi.py  API_Qwen.py
nodes/Logic/: compare.py  if_else_dispatcher.py  if_else_logicGate.py  is_empty.py  math_int.py
nodes/Loop/: for.py  list_from_loop.py  while.py
nodes/Translate/: baidu_Translate.py  chatGLM4_Translate.py
nodes/baidu_translate/: baiduTranslateNode.py  baiduTranslate_config.json
nodes/chatGLM4_translate/: chatGLM4TranslateTextNode.py  (+1 more)
scripts/: build_readme.py
web/: color_picker.js  create_image_batch.js  create_json_list.js  create_json_object.js  create_video_list.js  dynamic_inputs_pix.js  dynamic_loop_slots.js  export_html.js  export_image.js  get_video_from_path_list.js  image_comparer.js  json_list_pluck.js  json_list_zip.js  json_object_combine.js  json_object_extract.js  json_unpacker.js  storyboard_previewer.js
workflows/: 【预览分镜】外部粘贴.json  【预览分镜】手动创建.json  【预览分镜】调用LLM api.json
(+65 files in other folders)
